# msixbundle-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: checks.yml  publish.yml  tests.yml
msix/: Cargo.toml
msix-sys/: Cargo.toml  build.rs
msix-sys/src/: lib.rs
msix/src/: block_map.rs  bundle.rs  content_types.rs  identity.rs  lib.rs  package_writer.rs  sign.rs  zip_writer.rs
msix/tests/: bundle_minimal.rs  pack_minimal.rs  sign_minimal.rs
msix/tests/fixtures/: test_sign.pem
msixbundle/: Cargo.toml  README.md
msixbundle-cli/: Cargo.toml  README.md
msixbundle-cli/src/: main.rs
msixbundle/src/: lib.rs
msixbundle/tests/: integration.rs  native_backend.rs
packaging/npm/: README.md  build-sidecar.mjs
