[package]
name = "msix-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI bindings to Microsoft MSIX SDK"
keywords = ["msix", "appx", "windows", "packaging", "ffi"]
categories = ["external-ffi-bindings", "development-tools"]
links = "msix"

[build-dependencies]
cmake = "0.1"
bindgen = "0.70"

[dependencies]
libz-sys = { version = "1.1", features = ["static"] }

[features]
default = []
