[package]
name = "msix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust wrapper for Microsoft MSIX SDK"
keywords = ["msix", "appx", "windows", "packaging"]
categories = ["development-tools", "os::windows-apis"]

[dependencies]
msix-sys = { path = "../msix-sys" }
thiserror = "2"

[features]
default = []
