[package]
name = "msix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Pure-Rust MSIX/APPX package creation (pack), cross-platform"
readme = "README.md"
categories = ["development-tools", "compression"]
keywords = ["msix", "appx", "windows", "packaging"]

[dependencies]
thiserror = "2"
flate2 = "1"
crc32fast = "1"
quick-xml = "0.36"
sha2 = "0.10"
base64 = "0.22"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
