[package]
name = "msix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Pure-Rust MSIX/APPX package creation (pack), cross-platform"
readme = "README.md"
categories = ["development-tools", "compression"]
keywords = ["msix", "appx", "windows", "packaging"]

[dependencies]
thiserror = "2"
flate2 = "1"
crc32fast = "1"
quick-xml = "0.36"
sha2 = "0.10"
base64 = "0.22"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Signing: pure-Rust PKCS#7 / X.509 / RSA stack.
rasn = "0.28"
rasn-cms = "0.28"
rasn-pkix = "0.28"
rsa = { version = "0.9", features = ["sha2"] }
pem = "3"
signature = "2"
p12-keystore = "0.2"

[dev-dependencies]
tempfile = "3"
