[package]
name = "msixbundle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Command-line tool to pack/sign MSIX and build .msixbundle"
readme = "README.md"
categories = ["os::windows-apis", "development-tools"]
keywords = ["msix", "appx", "windows"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
msixbundle = { path = "../msixbundle", version = "1.1.0" }
